# DM_homework

./: .gitignore  README.md  dfs.pl  find_cycles.pl  tests_dfs.pl  tests_find_cycles.pl
lab/: part_0.md  part_1.md
program/: CMakeLists.txt  main.cpp
program/lib/: CMakeLists.txt  ast.cpp  ast.h  grammar.cpp  grammar.h  lexer.cpp  lexer.h  nonterminal.h  parser.cpp  parser.h  token.h
program/tests/: CMakeLists.txt  ast_builder.h  correctness_tests.cpp  exception_tests.cpp  main.cpp  parser_tests.cpp  test_framework.h  vizualization_tests.cpp
